# knowledge-builder

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage.lcov  docker-compose.yml  index.html  kb_docs_cli.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md  git-commit-instructions.md
.github/workflows/: docs-version.yml  docs.yml
adr/: index.html
adr/0001-orchestrator-refactor/: index.html
agent_orchestrator/: index.html
api/config/: index.html
api/connectors/: index.html
api/models/: index.html
api/processing/: index.html
api/services/: index.html
api/utils/: index.html
bootstrap/: get_token.py  token_init.sh
docs/: agent_orchestrator.md  index.md  root-readme.md  scheduler.md
docs/adr/: 0001-orchestrator-refactor.md  README.md  index.md
docs/api/: config.md  connectors.md  models.md  processing.md  services.md  utils.md
importer/: .dockerignore  Dockerfile  __init__.py
importer/src/: __init__.py  config.py  importer.py  main.py  models.py  monolithic_importer.py
importer/src/connectors/: __init__.py  neo4j_connector.py  paperless_connector.py
importer/src/processing/: __init__.py  agent_execution.py  agent_orchestrator.py  agent_prompts.py  document_processor.py  fallback_strategies.py  state_manager.py
importer/src/services/: __init__.py  bootstrap.py  scheduler.py
importer/src/utils/: __init__.py  json_parser.py  json_utils.py  text_utils.py  tool_call_extractor.py  tool_call_normalizer.py
importer/tests/: __init__.py  test_agent_orchestrator_helpers.py  test_agent_orchestrator_runtime.py  test_json_utils.py  test_tool_call_extractor_new.py
modelfile/: Modelfile
neo4j-stack/: docker-compose.yml
ollama/: Dockerfile  Modelfile
paperless-token/: Dockerfile  entrypoint.sh
root-readme/: index.html
scheduler/: index.html
scripts/: generate_module_map.py  monolith_guard.py  new_adr.py  test_extract_entities.py  test_tool_parsing.py
search/: search_index.json
