[project]
name = "knowledge-builder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.2.0",
    # Upgraded to ensure compatibility with langchain-core >=0.3.x
    "langgraph>=0.2.40,<0.3",
    "mcp-neo4j-memory>=0.3.0",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "schedule>=1.2.0",
    "loguru>=0.7.0",
    "orjson>=3.10.7",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocstrings[python]>=0.25.0",
    "mike>=2.1.0",
    "griffe>=0.48.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocstrings[python]>=0.25.0",
    "mike>=2.1.0",
    "griffe>=0.48.0",
    "pdm>=2.26.0",    
    "pre-commit>=3.8.0",
]

[tool.pdm.scripts]
docs-serve = "mkdocs serve -a localhost:12000"
docs-build = "mkdocs build"
docs-set-default = "python -m kb_docs_cli set_default"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["importer/tests"]
addopts = "-ra --cov=importer/src --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=lcov:coverage.lcov"
filterwarnings = [
    "ignore::DeprecationWarning:langchain.*",
]

[tool.setuptools]
packages = ["importer"]
